update comment color

--- a/reviewresponse.sty
+++ b/reviewresponse.sty
@@ -33,6 +33,7 @@
 %\colorlet{colorcommentbg}{colorlight!20}
 
 \definecolor{colorchangebg}{HTML}{e5f9de}
+\definecolor{colorchangetext}{HTML}{424242}
 \colorlet{colorchangeframe}{black!20}
 %%%
 
@@ -109,7 +110,8 @@
 }{\vspace{1em}}
 
 \newenvironment{changes}{
-\begin{tcolorbox}[breakable,left skip=0em,enhanced jigsaw, colframe={colorchangebg}, boxrule=0.1em, leftrule=1.5em, opacityback=0, opacityframe=1, arc=0pt]
-}{\end{tcolorbox}}
+\begin{tcolorbox}[breakable,left skip=0em,enhanced jigsaw, colframe={colorchangebg}, boxrule=0.1em, leftrule=1.5em, opacityback=0, opacityframe=1, arc=0pt]\color{colorchangetext}
+}
+{\end{tcolorbox}}
 
 \newcommand{\printpartbibliography}[1]{\begin{refsegment}\nocite{#1}\printbibliography[heading=none,segment=\therefsegment]\end{refsegment}}
