--- a/reviewresponse.sty
+++ b/reviewresponse.sty
@@ -41,7 +41,9 @@
 %%% General Settings
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{.25em}
-\renewcommand{\baselinestretch}{1.05}   
+\renewcommand{\baselinestretch}{1.0}
+\setlength{\headheight}{15pt}
+ \addtolength{\topmargin}{-3pt}
 \textheight 235mm        
 
 %%%
