--- a/reviewresponse.sty
+++ b/reviewresponse.sty
@@ -7,6 +7,8 @@
 % - section font configuration
 % - abbreviations
 % - some bug fixes
+%   - section title inconsistency
+%   - diff color in the change environment @KarlRaphel
 % - support good reference
 
 \RequirePackage{kvoptions}
@@ -122,7 +124,7 @@
 }{\vspace{1em}}
 
 \newenvironment{changes}{
-\begin{tcolorbox}[breakable,left skip=0em,enhanced jigsaw, colframe={colorchangebg}, boxrule=0.1em, leftrule=1.5em, opacityback=0, opacityframe=1, arc=0pt]\color{colorchangetext}
+\begin{tcolorbox}[breakable,use color stack, left skip=0em,enhanced jigsaw, colframe={colorchangebg}, boxrule=0.1em, leftrule=1.5em, opacityback=0, opacityframe=1, arc=0pt]\color{colorchangetext}
 }
 {\end{tcolorbox}}
 
