update example use case of \ref

--- a/Reviewers/R2.tex
+++ b/Reviewers/R2.tex
@@ -19,5 +19,5 @@
 	
 	\printpartbibliography{ReviewerReference,Besser2020}
 	
-	And btw, your Comment~\ref{comment:work-not-good} was mean!
+	And btw, your \ref{comment:work-not-good} was mean!
 \end{revresponse}
